WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
13019
REGRESSION (
r20074
): Forms don't submit on a variety of websites
https://bugs.webkit.org/show_bug.cgi?id=13019
Summary
REGRESSION (r20074): Forms don't submit on a variety of websites
Julian Grybowski
Reported
2007-03-08 20:46:24 PST
Steps to reproduce: 1.Using nightly build
r20077
, go to a number of sites, e.g. Facebook.com 2. Try to log in by entering info and clicking "login" Expected result: the form submits and you log in. Actual result: nothing happens. This seems to happen on a variety of websites, including (I'm told) Yahoo Mail. However, it's not universal, as Google still seems to work just fine. I'm told this regressed in
r20076
or
r20077
, so it's probably one of those changes that caused this. I'd really appreciate a fix soon, as this renders using TOT Webkit incredibly frustrating (hence my typing this in Firefox).
Attachments
Patch v1
(577 bytes, patch)
2007-03-08 21:36 PST
,
David Kilzer (:ddkilzer)
no flags
Details
Formatted Diff
Diff
Patch v2 (now with ChangeLog!)
(1.30 KB, patch)
2007-03-08 22:06 PST
,
David Kilzer (:ddkilzer)
bdakin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Julian Grybowski
Comment 1
2007-03-08 20:48:29 PST
(In reply to
comment #0
)
> I'm told this regressed in
r20076
or
r20077
, so it's probably one of those > changes that caused this.
Okay, now I'm told that this happened before either of those revisions. But at the very least, it happened _after_
r20057
.
David Kilzer (:ddkilzer)
Comment 2
2007-03-08 21:36:34 PST
Created
attachment 13552
[details]
Patch v1 This fixes the issue, but I think we need a layout test to prevent this from happening again. It was a bit of stray code that made it into the patch.
David Kilzer (:ddkilzer)
Comment 3
2007-03-08 21:59:32 PST
This is a regression from
r20074
:
http://trac.webkit.org/projects/webkit/changeset/20074
David Kilzer (:ddkilzer)
Comment 4
2007-03-08 22:06:05 PST
Created
attachment 13553
[details]
Patch v2 (now with ChangeLog!) Added ChangeLog. Change covered by existing layout tests which are currently failing.
Beth Dakin
Comment 5
2007-03-08 22:08:19 PST
Comment on
attachment 13553
[details]
Patch v2 (now with ChangeLog!) wooh!
David Kilzer (:ddkilzer)
Comment 6
2007-03-08 22:18:49 PST
Committed revision 20084.
David Kilzer (:ddkilzer)
Comment 7
2007-03-11 09:59:24 PDT
***
Bug 13032
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug