WebCore:

Reviewed by Beth.

        - fix http://bugs.webkit.org/show_bug.cgi?id=13019
          REGRESSION (r20074): Forms don't submit on a variety of websites

        No tests added since LayoutTests/fast/forms/document-write.html was timing out
        and causing a layout test failure.

        * html/HTMLFormElement.cpp:
        (WebCore::HTMLFormElement::submit): Removed stray code.



Canonical link: https://commits.webkit.org/16893@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@20084 268f45cc-cd09-0410-ab3c-d52691b4dbfc