WebCore/html/HTMLFormElement.cpp
@@ -423,8 +423,6 @@ void HTMLFormElement::submit(Event* event, bool activateSubmitButton)
     if (needButtonActivation && firstSuccessfulSubmitButton)
         firstSuccessfulSubmitButton->setActivatedSubmit(true);
 
-    if (!m_post)
-
     if (m_post) {
         if (!m_multipart)
             frame->loader()->submitForm("POST", m_url, formData(0), m_target, enctype(), String(), event);
